--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: python
 
+python:
+  - "2.7"
+
 sudo: false
 
 addons:
+  postgresql: "9.3"
   apt:
     packages:
       - cmake
@@ -17,6 +21,12 @@ addons:
 install:
     - pip install pyspatialite
 
+services: postgresql
+
+before_script:
+  - psql -c 'create database big_epanet_test_db;' -U postgres
+  - psql -U postgres -c "create extension postgis"
+  
 script:
   - find / -name proj_api.h
   - cmake .
